RESOLVED FIXED 251340
Save some memory by not putting serialized valueID strings into a hash map
https://bugs.webkit.org/show_bug.cgi?id=251340
Summary Save some memory by not putting serialized valueID strings into a hash map
Darin Adler
Reported 2023-01-29 16:22:53 PST
CSSPrimitiveValue saves strings of serialized values in a map to avoid recomputing them. This is wasteful for the serialized form of CSSValueID, since they are all precomputed at compile time. Putting them in the hash table is a waste of memory.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-29 16:23:32 PST
Darin Adler
Comment 2 2023-01-29 22:14:19 PST
EWS
Comment 3 2023-01-30 09:18:56 PST
Committed 259562@main (29c1dd855828): <https://commits.webkit.org/259562@main> Reviewed commits have been landed. Closing PR #9301 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.