Source/WebCore/css/parser/CSSPropertyParser.cpp
@@ -49,7 +49,6 @@
 #include "CSSTokenizer.h"
 #include "CSSVariableParser.h"
 #include "CSSVariableReferenceValue.h"
-#include "Counter.h"
 #include "FontFace.h"
 #include "Pair.h"
 #include "ParsingUtilities.h"
